using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IDamageApplicable
{
    void ApplyDamage(int power);
}