using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class GameManager : MonoBehaviour
{
    // Start is called before the first frame update
    void Start()
    {
        AudioManager.Instance.PlayBGM(BGM.BGM1.ToString(),2f);
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
